--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -14,21 +14,29 @@ html {
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
+/* personalized css  for index.html*/
+
+
+/*end of personalized css for index.html */
+
+
+/* personalized css  for Dashboard.html*/
 body {
   margin: 0;
     background-color: #B4B9C2;
  }
-/* personalized css */
+
 div#header{
     width: 100%;
-    height: 20px;
-  /*  background-color: #2980b9; */
+   /*  height: 15px;
+   background-color: #2980b9; */
     margin: 0 auto;
+    /*position: fixed; */
 }
 
 .dropdown{
   float: right;
-  margin-top:10px;
+  margin-top: 30px;
   margin-right:35px;
 }
 
@@ -39,7 +47,7 @@ div#header{
 }
 
 .logo a {
-    font-size: 1.6em;
+    font-size: 1.3em;
     color: #3498db;
 }
 
@@ -47,14 +55,16 @@ div#header{
     font-weight: 300;
 }
 
+/*
 div#container {
     width: 100%;
+    height: 100%;
     margin: 0 auto;
 }
-
+*/
 .sidebar{
     width: 250px;
-    height: 100%;
+  /*  height: 100%; */
     float: left;
     background-color: #3498db;
     padding: 2.1em;
@@ -94,12 +104,111 @@ ul#nav li a.selected {
 .content {
     width: auto;
     margin-left: 250px;
-    height: 100%;
-    background-color: #3498db;
+    /*height: 100%; 
+    background-color: #3498db; */
     padding: 15px;
     border-radius: 25px;
-     
+ }
+
+.home {
+    width: 100%;
+    margin-top: -14px;
+    background-color: #3498db;
+    border-radius: 10px;
+    padding: 15px;
 }
+.div1 {
+          width: 100%;
+    display: inline-block; 
+    
+}
+
+div#div1{
+    height: 61%;
+}
+
+.div2 {
+    width: 100%;
+    display: inline-block;    
+}
+div#div2{
+    height: 25%;
+}
+
+div#box {
+    width: 0 auto;  
+    margin-top: 15px;
+    padding: 10px;
+    border-radius: 20px;
+    
+}
+
+
+div#box .box-top {
+    color: #fff;
+    text-shadow: 0px 0px 1px #ddd;
+    background-color: #2980b9;
+    padding: 10px;
+    padding-left: 15px;
+     border-radius: 5px;
+     font-weight: 300;
+    
+}
+
+div#box .box-panel{
+    
+    display: block;
+      padding: 15px;
+    background-color: #fff;
+    color: #333;
+     border-radius: 5px;
+    overflow: auto;
+}
+
+
+a.mobile{
+    display: block;
+    color: #fff;
+    background-color: #2980b9 ;
+    text-align: center;
+    padding: 7px;
+}
+
+a.mobile:active {
+    background-color: dodgerblue;
+}
+
+@media only screen and (max-width: 320px){
+  .sidebar {
+     width: 100%;
+    display: none;
+  }
+
+  .content {
+      margin-left: 0px;
+      width: 100%;
+  }
+   
+}
+
+
+
+@media only screen and (min-width: 320px){
+  a.mobile {
+      display: none;
+   }
+  .sidebar {
+    /*height: 100%; */
+   }
+  
+}
+/*   body {
+      display: none;
+  }
+
+  */
+/* end of personalized css for Dashboard.html */
+
 article,
 details,
 figcaption,
