--- a/css/home.css
+++ b/css/home.css
@@ -378,15 +378,15 @@ form#form2 input {
 /* CSS for Login Page */
 
 .login{
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     margin: 0;
   padding: 0;
   border: 0;
-    background-image: url("../images/img7.png");
+    background-image: url("../images/img6.png");
     background-repeat: no-repeat;
-    background-size: 100% 720px; 
-    overflow: auto;
+   /* background-size: 100% 720px; */ 
+    /*overflow: auto; */
     }
 
 div#log {
@@ -404,11 +404,24 @@ div#log {
     
 }
 
+/*
 form#log{
-     margin-top: 80px;
-    margin-bottom: 90px;
-    padding: 20px;
-    float: center;
+     margin-top: 20px;
+    margin-bottom: -15px;
+    margin-left: 20px;
+    margin-right: 20px;
+    padding: 10px;
+  
+}
+*/
+form#log{
+     margin-top: 5em;
+    margin-bottom: 5.6em;
+    margin-left: em;
+    margin-right: em;
+    padding: 1.25em;
+        
+   
 }
 
 
@@ -469,28 +482,239 @@ div#text a{
 
 /*Responsive */
 
+
 @media screen and (max-width:480px){
-  
-.home {
-         display: none; 
-    }
+ 
     
-  .content {
-      margin-left: 0px;
-      width: 100%;
-  } 
-    
+body {
+   margin: 0;
+  padding: 0;
+  border: 0;
+}
 
-     
+input:invalid {
+  border: 1px solid red;
+}
 
+input:valid {
+  border: 1px solid green;
+}
+
+#header {
+  z-index: 2;
+  position: fixed;
+  width: 100%;
+  height: 50px;
+  line-height: 60px;
 }
 
 
 
-@media screen and (min-width:360px) and (max-width:480px){
- 
- 
+
+/* CSS for home page */
+.home{
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+     padding: 0;
+  border: 0;
+    background-image: url("../images/img8.png");
+   background-repeat: no-repeat;
+    background-size: 100% 720px;  /*  */
+    overflow: auto;
+   
+    }
+
+
+div#welcome img{
     
+       margin: 0 auto;
+     height: 250px;
+    margin-left: 550px;
+    margin-top: 200px; 
+    margin-bottom: 200px;
+    border-radius: 5px;
+     opacity: 0.80;
+    filter: alpha(opacity=80);
+  }
+
+/*
+div#welcome img{
+ margin: 0 auto;
+ margin-left: 400px;
+ height: 200px;
+     opacity: 0.70;
+    filter: alpha(opacity=70);
+} 
+
+div#welcome p{
+      margin: 0 auto;
+    margin-top: 80px;
+    font-weight: 300;
+     font-family: "Times New Roman", Times, serif;
+   float: left;
+ } 
+
+small{
+    font-style: oblique;
+}
+
+*/
+
+div#choice{
+    
+    margin: 0 auto;
+    margin-right: 30px;
+   float: right;
+    padding: 10px;
+   
+    
+   /* padding: 10px;
+     margin-left: 245px; 
+    float: left;*/
+ }
+ /*
+div#choice2{
+    margin: 0 auto;
+   padding: 10px;
+    padding-left: 10px;
+    margin-left: 245px; 
+    float: right; 
+ }
+*/
+
+/* CSS for sign-in page */
+
+.signup{
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+  padding: 0;
+  border: 0;
+    background-image: url("../images/img9.png");
+    background-repeat: no-repeat;
+    background-size: 100% 720px; 
+    overflow: hidden;
+    
+    
+    }
+
+
+
+div#sign {
+  /* width: 400px;
+    height: 560px; */
+    text-align: center;
+    background-color: #34495E ;
+    border-radius: 5px;
+    margin-top: 70px;
+    margin-bottom: 100px;
+    margin-right: 450px;
+    margin-left: 500px;
+    opacity: 0.95;
+    filter: alpha(opacity=95);
+   /* overflow-y: auto;*/
+    z-index: 5;
+
+}
+
+.img {
+  margin-top: 1.5em;
+  margin-bottom: -2.5em;
+ /* position: fixed;
+    z-index: 2; 
+    margin-left: 4.0em;
+    margin-right: 4.0em;
+    */
+    border-radius: 5px;
+}
+
+
+form span {
+   color:antiquewhite;
+   /* font-style: italic;
+    font-size:  0.95em; */
+    font: italic 14px cosmic sans; 
+    margin-top: -55px;
+    margin-bottom: 20px;
+    margin-left: 15px;
+    margin-right: -35px;
+    padding: -10px;
+    align-self: center;
+       
+  }
+
+form#sign{
+     margin-top: 20px;
+    margin-bottom: -15px;
+    margin-left: 20px;
+    margin-right: 20px;
+    padding: 10px;
+  
+}
+
+.form-control{
+    margin-bottom: 5px;
+    margin-top: 0px;
+    margin-left: 40px;
+    margin-right: 10px;
+    padding: 10px;
+    
+ }
+
+
+
+.form-group {
+     margin-left: -30px;
+    margin-right: 10px;
+    margin-top: -10px;
+    margin-bottom: -10px;
+}
+
+form i{
+    margin-left: 0px;
+    margin-right: -40px;
+    float: left;
+    clear: left;
+}
+
+form#sign input.btn{
+     margin-top: -10px;
+    margin-bottom: 20px;
+clear: none;
+     display: inline;
+   
+    }
+
+
+div#sign img{
+     margin: 0 auto;
+ margin-left: 400px;
+ height: 140px;
+    
+   /* width: 150px;
+    height: 150px; */
+    margin-top: -320px; 
+    margin-bottom: -200px;
+     margin-right: 50px;
+    margin-left: 50px;
+    border-radius: 5px;
+  /*  position: fixed;
+    z-index: 2; */ 
+     
+    /*opacity: 0.95;
+    filter: alpha(opacity=95); /* For IE8 and earlier */
+    
+}
+
+    
+}
+
+
+
+@media screen and (min-width:480px) and (max-width:640px){
+ 
+  
 }
 
 
@@ -498,16 +722,9 @@ div#text a{
 
 @media screen and (min-width:480px){
  
-     
-.section {
-         display: none; 
-    }
     
-  .content {
-      margin-left: 0px;
-      width: 100%;
-  } 
-    
-    
-
 }
+
+
+
+
